--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,7 +16,9 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-        <td><%= render 'favorites/favorite', book: book %></td>
+        <td id="favorite_btn_<%= book.id %>">
+          <%= render 'favorites/favorite', book: book %>
+        </td>
         <td><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
       </tr>
     <% end %>
