--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,7 +19,7 @@
            <% end %></td>
        <td><%= link_to @book.title, @book %></td>
        <td><%= @book.body %></td>
-       <td>
+       <td id="favorite_btn_<%= @book.id %>">
         <%= render 'favorites/favorite', book: @book %>
        </td>
        <td id="comment_counter">
