--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,9 +1,9 @@
  <% if book.favorited_by?(current_user) %>
-    <%= link_to book_favorite_path(book), method: :delete, local: false do %>
+    <%= link_to book_favorite_path(book), method: :delete, remote: true do %>
       ♥<%= book.favorites.count %>
     <% end %>
 <% else %>
-    <%= link_to book_favorite_path(book), method: :post, local: false do %>
+    <%= link_to book_favorite_path(book), method: :post, remote: true do %>
       ♡<%= book.favorites.count %>
     <% end %>
 <% end %>
